sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: not found: value int
  int x;
  ^AlgBubbleSort1:4: error: not found: value x
  x=1;
  ^AlgBubbleSort1:5: error: not found: value x
  while(x==0){
        ^AlgBubbleSort1:6: error: not found: value x
    x=0;
    ^AlgBubbleSort1:10: error: not found: value x
        x=1;
        ^